# Rift

./: .gitignore  Cargo.toml  LICENSE  PROFILING.md  README.md  config.example.toml
dist-linux/: DEPLOY.md  rift.service  setup.sh  start.sh
downstream/RiftSupport/: plugin.yml
downstream/RiftSupport/resources/: config.yml
downstream/RiftSupport/src/Rift/: Main.php  RiftPlayer.php
src/: compression.rs  config.rs  console.rs  control.rs  crypto.rs  downstream.rs  framing.rs  intercept.rs  jwt.rs  login.rs  main.rs  metrics.rs  packets.rs  packs.rs  profiling.rs  registry.rs  web.rs
tools/riftbench/: README.md  go.mod  go.sum  main.go
