[package]
name = "rift"
version = "0.0.1"
edition = "2021"
description = "High-performance lightweight Minecraft Bedrock proxy (Waterdog replacement goal) — Phase 0: transparent UDP relay"

[[bin]]
name = "rift"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "sync", "signal"] }
# vendored + patched: ACK batching (per-datagram → 50ms tick). See docs/phase1b-design.md.
rift-raknet = { path = "vendor/rift-raknet" }
# Phase 1b — Bedrock packet encryption (AES-256-CTR "fake GCM")
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
# Phase 1b — P-384 key (ECDH shared secret + ECDSA/ES384 JWT signing, same key pair)
p384 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8"] }
rand = "0.8"
# Phase 1b — Bedrock login/handshake JWT (ES384, x5u=DER public key)
base64 = "0.22"
serde_json = "1"
# Phase 1b — batch compression. zlib uses RAW DEFLATE (no header, PMMP ZLIB_ENCODING_RAW); snappy uses raw blocks.
flate2 = "1"
snap = "1"
# Performance — global allocator (often faster than Rust's default). docs/performance.md #12.
# optional: the only C dependency. For musl static builds (deploy-anywhere), pass --no-default-features
# to drop it and get a pure-Rust static link without musl-gcc. Regular builds enable mimalloc by default.
mimalloc = { version = "0.1", optional = true }
# Resource pack serving — reads manifest.json inside .mcpack/.zip files (extracts uuid/version).
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# default: uses the mimalloc global allocator. Disable with --no-default-features for musl static builds —
# removes the C dependency and produces a pure-Rust static binary (falls back to the system allocator).
default = ["mimalloc"]
# Instrumented build: exposes alloc count/bytes via /metrics using a counting allocator (verifies Hot Path Allocation=0).
# Disabled in production — zero overhead. Example: cargo build --release --features profiling
profiling = []
# Faster DEFLATE decompression via zlib-ng (C) instead of the default pure-Rust miniz_oxide backend —
# ~1.5-2x faster inflate, which is the dominant cost of decoding the down stream. Like mimalloc it is a
# C dependency (needs a C toolchain + cmake) and is incompatible with the pure-Rust musl static build, so
# it is opt-in for the glibc production binary:  cargo build --release --features fast-inflate
fast-inflate = ["flate2/zlib-ng"]

[profile.release]
opt-level = 3
lto = "fat"          # full cross-crate LTO — inlines the rift-raknet/flate2 hot path into the relay loop
codegen-units = 1
panic = "abort"
strip = true        # Strip debug symbols to reduce release binary size

# Profiling build: same optimizations as release but retains symbols (strip=false, debug info).
# Use this build with perf/flamegraph to identify hot functions.
#   cargo build --profile profiling   → target/profiling/rift  (symbols included)
[profile.profiling]
inherits = "release"
debug = true
strip = false
